--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </section>
         <section class="secondSection">
             <button class="btn-37">
-                <a href="resume.html" style="text-decoration: none; color: #ffffff;">
+                <a href="https://drive.google.com/file/d/1U22eKRTgdHF9h2ZhNql8Q3p3CuVCqvIo/view?usp=drive_link" style="text-decoration: none; color: #ffffff;">
                     <span class="new">Open</span>
                     <div class="old">
                         <span>Resume</span>
