--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <script>
                     var typed = new Typed('#element', {
                         strings: [
-                            'MERN Developer',
+                            'MERN Stack Developer',
                             'skilled in Python.',
                             'skilled in Databases.'
                         ],
