--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 <script>
                     var typed = new Typed('#element', {
                         strings: [
-                            'MERN Stack Developer',
+                            'MERN Stack Developer.',
                             'skilled in Python.',
-                            'skilled in Databases.'
+                            'AI Enthusiast.'
                         ],
                         typeSpeed: 20,
                         backSpeed: 25,
